--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,13 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Dr. Joni Zhong"
+title                    : "Dr. Junpei ‘Joni’ Zhong"
 title_separator          : "-"
 name                     :  "Dr. Joni Zhong"
 description              :  "Cognitive Interactive Robots, HRI/HCI, Human-AI Interaction, Cognitive Science"
-URL                      : "https://joni33.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+URL                      : "https://robotdocjoni.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "joni33.github.io"
+repository               : "jonizhong.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
