--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,23 @@
 # main links links
 main:
+
+- title: "Research"
+    url: /research/
+
+    - title: "Projects"
+    url: /projects/
+    
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+      
 
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
+
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+  - title: "Contact"
+    url: /contact/
