--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@ main:
     url: /KT/
     
   - title: "CV"
-    url: /cv/
+    url: https://www.dropbox.com/scl/fi/nutm9be6js2slwl54klo7/jz-CV.pdf?rlkey=zm6tuzowiqfydubldmvols41l&dl=0
     
   - title: "contact"
     url: /contact/
