--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Dr. Joni Zhong"
-  pronouns         : "he/him"  
+  pronouns         : "he/they"  
   bio              : "A passionate researcher and educator in HRI, Human-centric AI and Cognitive Science"
   location         : "Hong Kong"
   employer         : "The Hong Kong Polytechnic University"
