--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,23 +1,19 @@
 # main links links
 main:
-
-  - title: "Research"
-    url: /research/  
-    
+   - title: "CV"
+    url: /CV/
+  
+  - title: "Projects"
+    url: /projects/
+        
   - title: "Publications"
     url: /publications/
 
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Projects"
-    url: /projects/
-        
   - title: "Knowledge Transfer"
     url: /KT/
-    
-  - title: "CV"
-    url: https://www.dropbox.com/scl/fi/nutm9be6js2slwl54klo7/jz-CV.pdf?rlkey=zm6tuzowiqfydubldmvols41l&dl=0
-    
-  - title: "contact"
+      
+  - title: "Contact"
     url: /contact/
